# ultimate-frisbee-app

./: .gitignore  AGENTS.md  _player_body_block.js  gameplay-analyzer.html  index.html  video-lab.html
analyzer/: README.md  pyproject.toml
analyzer/data/samples/: coaching_notes.json  demo_possession.json  lesson_export_sample.json
analyzer/scripts/: analyze_clip.py  animation_generation.py  classify_roles.py  detect_players.py  disc_tracking.py  extract_frames.py  field_calibration.py  generate_board.py  generate_notes.py  ingest_video.py  lesson_export.py  possession_segmentation.py  track_players.py
analyzer/server/: app.py
analyzer/web/: analyzer.css  analyzer.js  index.html
docs/: dump-swing-research.md  gameplay-analyzer-full-build.md  references.md  team-data-graph.md  validation.md  video-lab.md
free-ultimate-frisbee-gameplay-analyzer/: free-ultimate-frisbee-gameplay-analyzer.css  index.html
learn-ultimate-preview/: index.html  learn-ultimate-preview.css  legal.css
learn-ultimate-preview/privacy/: index.html
learn-ultimate-preview/terms/: index.html
