[project]
name = "ultimate-gameplay-analyzer"
version = "0.1.0"
description = "Private Gameplay Analyzer research pipeline (local only)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "flask>=3.0,<4",
  "flask-cors>=4.0,<5",
]

[project.optional-dependencies]
dev = []

[tool.setuptools]
packages = []
